# Eneroth

./: .gitignore  Makefile  README.md  package.xml
src/: Eneroth.py  SafeZone.ods
src/Commands/: BuildDB.py  Client.py  Dialogue.py  DummySender.py  DynGUI.py  DynGUIMongo.py  GUI_filter.py  GUI_kernel.py  GUI_setup.py  Ghost.py  Guesser.py  HLS.py  Logger.py  ReachTester.py  Reset.py  YuMiControl.py  __init__.py
src/Commands/participant_000_session_hololens/: log.csv
src/Commands/participant_000_session_hololens_1/: log.csv
src/Commands/participant_001_session_monitor/: log.csv
src/Commands/participant_002_session_dialogue/: log.csv
src/Commands/participant_002_session_dialogue_1/: log.csv
src/Commands/participant_002_session_hololens/: log.csv
src/Commands/participant_002_session_projector/: log.csv
src/Commands/participant_003_session_dialogue/: log.csv
src/Commands/participant_003_session_dialogue_1/: log.csv
src/Commands/participant_005_session_dialogue/: log.csv
src/Commands/participant_005_session_monitor/: log.csv
src/Commands/participant_006_session_dialogue/: log.csv
src/Commands/participant_006_session_hololens/: log.csv
src/Commands/participant_006_session_monitor/: log.csv
src/Commands/participant_006_session_projector/: log.csv
src/Commands/participant_007_session_dialogue/: log.csv
src/Commands/participant_007_session_hololens/: log.csv
src/lego/: .~lock.Lego_DB.csv#  .~lock.Lego_DB_1.csv#  Lego_DB (copy).csv  Lego_DB_1.csv
src/legoDB/: Lego_DB.csv  Lego_DB_0_update2.csv  Lego_DB_allparts.csv
(+136 files in other folders)
